--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "axios": "^1.8.2",
     "daisyui": "^5.0.0",
+    "dotenv": "^16.4.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
