--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.8.2",
     "daisyui": "^5.0.0",
     "dotenv": "^16.4.7",
