--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "daisyui": "^5.0.0",
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "mitt": "^3.0.1",
     "swiper": "^11.2.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.9",
