--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@heroicons/vue": "^2.2.0",
     "animate.css": "^4.1.1",
     "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.0",
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
